--- a/1th-homework/src/App.css
+++ b/1th-homework/src/App.css
@@ -1,5 +1,44 @@
 .App {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.problem {
   text-align: center;
+}
+
+.gugudan-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.gugudan-item {
+  margin: 10px;
+  text-align: center;
+}
+
+.number-list {
+  display: flex;
+}
+
+.number-list > div {
+  flex: 1;
+  margin-right: 20px;
+}
+
+.problem li {
+  list-style-type: none;
+}
+
+.Header {
+  position: absolute;
+  top: 100px;
+  left: 50%;
+  transform: translate(-50%);
 }
 
 .App-logo {
